fix(grid): row resizer is not visible with sticky columns

--- a/packages/fluent/scss/grid/_layout.scss
+++ b/packages/fluent/scss/grid/_layout.scss
@@ -488,6 +488,7 @@
         position: absolute;
         background: none;
         cursor: row-resize;
+        z-index: 2;
     }
 
     .k-row-resizer {
